--- a/index.html
+++ b/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dora aventureira</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <ul>
             <li>
                 <a>sobre Dora aventureira</a>
+            </li>
+            <li>
+                <a>historia</a>
+            </li>
+            <li>
+                <a>ensinamentos</a>
             </li>
         </ul>
     </nav>
