--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <nav>
         <ul>
             <li>
-                <a>sobre Dora aventureira</a>
+                <a href="index.html>sobre Dora aventureira</a>
             </li>
             <li>
-                <a>historia</a>
+                <a href="project.html">historia</a>
             </li>
             <li>
                 <a>ensinamentos</a>
