--- a/index.html
+++ b/index.html
@@ -16,9 +16,16 @@
                 <a href="project.html">historia</a>
             </li>
             <li>
-                <a>ensinamentos</a>
+                <a href="contact.html">contato</a>
             </li>
         </ul>
     </nav>
+
+
+    <header>
+        <div class="center">
+            <img src="./img/dora avrntureira.jpg" ></img>
+        </div>
+    </header>
 </body>
 </html>
