--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
         <div class="center">
             <img src="./img/dora avrntureira.jpg" ></img>
         </div>
+        <h1>dora aventureira</h1>
+        <h2>a aventureira</h2>
     </header>
 </body>
 </html>
