--- a/index.html
+++ b/index.html
@@ -29,5 +29,14 @@
         <h1>dora aventureira</h1>
         <h2>a aventureira</h2>
     </header>
+
+    <main>
+        <section>
+            <h3>sobre dora aventureira</h3>
+            <p>
+                O desenho tem caráter educativo e apresenta as aventuras de Dora e seu amigo o macaco Botas que frequentemente falam com o telespectador e sempre viajam ajudando seus amigos e ensinando os telespectadores a falarem espanhol (inglês, nas versões dubladas em português) com cada episódio seguindo sempre a mesma estrutura. Esse foco de um desenho pré-escolar com episódios no mesmo formato e personagens falando com telespectadores se tornou popular sendo usado em muitos outros desenhos pré-escolares em anos seguintes.
+            </p>
+        </section>
+    </main>
 </body>
 </html>
