--- a/index.html
+++ b/index.html
@@ -32,13 +32,11 @@
 
     <main>
         <section>
-            <h3>sobre dora aventureira</h3>
+            <h3>historia real</h3>
             <p>
                 O desenho tem caráter educativo e apresenta as aventuras de Dora e seu amigo o macaco Botas que frequentemente falam com o telespectador e sempre viajam ajudando seus amigos e ensinando os telespectadores a falarem espanhol (inglês, nas versões dubladas em português) com cada episódio seguindo sempre a mesma estrutura. Esse foco de um desenho pré-escolar com episódios no mesmo formato e personagens falando com telespectadores se tornou popular sendo usado em muitos outros desenhos pré-escolares em anos seguintes.Alguns profissionais ligados a necessidades educativas especiais recomendam esse desenho para crianças com autismo, devido aos apoios visuais durante toda a comunicação dos personagens com a criança espectadora.
 
                 No Brasil, a série começou a ser exibido pela Nickelodeon (em canal fechado) no bloco Nick Jr e depois no próprio canal Nick Jr.. Na televisão aberta já foi transmitido pela RedeTV! no programa TV Clubinho entre 2006 e 2007, transmitindo apenas as duas primeiras temporadas. Posteriormente o programa retornou ao ar em rede aberta pela TV Cultura em 2009, transmitindo apenas episódios da 3ª, 4ª e 5ª temporada,[1] posteriormente tendo se aderido ao programa Quintal da Cultura. No dia 13 de julho de 2015 a TV Cultura adquiriu e transmitiu os episódios restantes da série. Desde 2019, é exibido, para o estado do Amazonas, pela TV A Crítica e Inova TV (afiliada à RedeTV!), ambas da Rede Calderaro de Comunicação, devido a um acordo com a Nickelodeon, junto com outros desenhos do canal.
-                
-                
             </p>
         </section>
     </main>
