--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <main>
         <section>
-            <h3>historia real</h3>
+            <h3>sobre dora aventureira</h3>
             <p>
                 O desenho tem caráter educativo e apresenta as aventuras de Dora e seu amigo o macaco Botas que frequentemente falam com o telespectador e sempre viajam ajudando seus amigos e ensinando os telespectadores a falarem espanhol (inglês, nas versões dubladas em português) com cada episódio seguindo sempre a mesma estrutura. Esse foco de um desenho pré-escolar com episódios no mesmo formato e personagens falando com telespectadores se tornou popular sendo usado em muitos outros desenhos pré-escolares em anos seguintes.Alguns profissionais ligados a necessidades educativas especiais recomendam esse desenho para crianças com autismo, devido aos apoios visuais durante toda a comunicação dos personagens com a criança espectadora.
 
@@ -42,3 +42,10 @@
     </main>
 </body>
 </html>
+
+<footer>
+
+</footer>
+<body>
+    
+<html>
