--- a/index.html
+++ b/index.html
@@ -39,13 +39,41 @@
                 No Brasil, a série começou a ser exibido pela Nickelodeon (em canal fechado) no bloco Nick Jr e depois no próprio canal Nick Jr.. Na televisão aberta já foi transmitido pela RedeTV! no programa TV Clubinho entre 2006 e 2007, transmitindo apenas as duas primeiras temporadas. Posteriormente o programa retornou ao ar em rede aberta pela TV Cultura em 2009, transmitindo apenas episódios da 3ª, 4ª e 5ª temporada,[1] posteriormente tendo se aderido ao programa Quintal da Cultura. No dia 13 de julho de 2015 a TV Cultura adquiriu e transmitiu os episódios restantes da série. Desde 2019, é exibido, para o estado do Amazonas, pela TV A Crítica e Inova TV (afiliada à RedeTV!), ambas da Rede Calderaro de Comunicação, devido a um acordo com a Nickelodeon, junto com outros desenhos do canal.
             </p>
         </section>
-    </main>
-</body>
-</html>
+        <section>
+            <h3>Teoria macabra</h3>
+<p>
+    e acordo com a teoria que circula na internet, Dora Aventureira seria cega pelo fato de ela sempre perguntar onde as coisas estão, por mais óbvias que possam parecer.
 
-<footer>
-
-</footer>
-<body>
+    Assim, os teóricos ainda explicam que Raposo, que é o antagonista do desenho, é quem teria roubado os seus olhos. Desde então, ela passa a jornada em busca de novos pares, explorando lugares e conhecendo animais diferentes que poderiam lhe ajudar.
     
-<html>
+</p>
+        </section>
+        <section>
+            <h3>clubes</h3>
+<p>
+ # O jogador brasileiro descoberto pelo santos um time brasileiro acabou se destacando na época, depois foi tranferido para o barcelona, depois do jogador sair do barcelona foi tranderido para o PSG "Paris saint-germain", depois de ter saido do PSG, o jogador brasileiro foi tranferido para o AL-HILAL., Dlibles: Os blibles insanos do jogador neymar JR influênciam muitos jogadores a ser mais ousado com a bola e também inspiram vários jogadores nas bases a ser um bom jogador.
+</p>     
+        </section>
+    </main>
+
+    <footer>
+        <a href="https://github.com/luizgustavo2507" target="_blank" rel="noopener noreferrer">
+          <img src="./img/github.png"></img>
+          <p>github</p>
+        </a>
+        <a href="https://vercel.com/luiz-s-projects-ab97f2a8/in/" target="_blank" rel="noopener noreferrer">
+            <img src="./img/vercel.jpg"></img>
+            <p>vercel</p> 
+          </a>
+          <a href="https://scratch.mit.edu//in/" target="_blank" rel="noopener noreferrer">
+            <img src="./img/scratch.png"></img>
+            <p>scratch</p>
+          </a>
+    </footer>
+</div>
+      </a>
+</footer>
+</body>
+
+</html>
+    
