--- a/index.html
+++ b/index.html
@@ -47,25 +47,18 @@
     Assim, os teóricos ainda explicam que Raposo, que é o antagonista do desenho, é quem teria roubado os seus olhos. Desde então, ela passa a jornada em busca de novos pares, explorando lugares e conhecendo animais diferentes que poderiam lhe ajudar.
     
 </p>
-        </section>
-        <section>
-            <h3>clubes</h3>
-<p>
- # O jogador brasileiro descoberto pelo santos um time brasileiro acabou se destacando na época, depois foi tranferido para o barcelona, depois do jogador sair do barcelona foi tranderido para o PSG "Paris saint-germain", depois de ter saido do PSG, o jogador brasileiro foi tranferido para o AL-HILAL., Dlibles: Os blibles insanos do jogador neymar JR influênciam muitos jogadores a ser mais ousado com a bola e também inspiram vários jogadores nas bases a ser um bom jogador.
-</p>     
-        </section>
     </main>
 
     <footer>
-        <a href="https://github.com/luizgustavo2507" target="_blank" rel="noopener noreferrer">
+        <a href="" target="_blank" rel="noopener noreferrer">
           <img src="./img/github.png"></img>
           <p>github</p>
         </a>
-        <a href="https://vercel.com/luiz-s-projects-ab97f2a8/in/" target="_blank" rel="noopener noreferrer">
+        <a href="" target="_blank" rel="noopener noreferrer">
             <img src="./img/vercel.jpg"></img>
             <p>vercel</p> 
           </a>
-          <a href="https://scratch.mit.edu//in/" target="_blank" rel="noopener noreferrer">
+          <a href="" target="_blank" rel="noopener noreferrer">
             <img src="./img/scratch.png"></img>
             <p>scratch</p>
           </a>
