--- a/index.html
+++ b/index.html
@@ -50,15 +50,15 @@
     </main>
 
     <footer>
-        <a href="" target="_blank" rel="noopener noreferrer">
-          <img src="./img/github.png"></img>
+        <a href="https://github.dev/milly1516/cria-o-de-um-site-basico" target="_blank" rel="noopener noreferrer">
+          <img src="./img/github.png"></img
           <p>github</p>
         </a>
-        <a href="" target="_blank" rel="noopener noreferrer">
+        <a href="https://vercel.com/kamillys-projects-" target="_blank" rel="noopener noreferrer">
             <img src="./img/vercel.jpg"></img>
             <p>vercel</p> 
           </a>
-          <a href="" target="_blank" rel="noopener noreferrer">
+          <a href="https://scratch.mit.edu/" target="_blank" rel="noopener noreferrer">
             <img src="./img/scratch.png"></img>
             <p>scratch</p>
           </a>
