--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <nav>
         <ul>
             <li>
-                <a href="index.html>sobre Dora aventureira</a>
+                <a>historia</a>
             </li>
             <li>
-                <a href="project.html">historia</a>
+                <a>tragetória</a>
             </li>
             <li>
-                <a href="contact.html">contato</a>
+                <a>amizades</a>
             </li>
         </ul>
     </nav>
