--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
     </header>
 
     <main>
+        </section>
         <section>
-            <h3>sobre dora aventureira</h3>
+            <h3>história</h3>
             <p>
                 O desenho tem caráter educativo e apresenta as aventuras de Dora e seu amigo o macaco Botas que frequentemente falam com o telespectador e sempre viajam ajudando seus amigos e ensinando os telespectadores a falarem espanhol (inglês, nas versões dubladas em português) com cada episódio seguindo sempre a mesma estrutura. Esse foco de um desenho pré-escolar com episódios no mesmo formato e personagens falando com telespectadores se tornou popular sendo usado em muitos outros desenhos pré-escolares em anos seguintes.Alguns profissionais ligados a necessidades educativas especiais recomendam esse desenho para crianças com autismo, devido aos apoios visuais durante toda a comunicação dos personagens com a criança espectadora.
 
@@ -40,11 +41,18 @@
             </p>
         </section>
         <section>
-            <h3>Teoria macabra</h3>
+            <h3>tragetória</h3>
 <p>
     e acordo com a teoria que circula na internet, Dora Aventureira seria cega pelo fato de ela sempre perguntar onde as coisas estão, por mais óbvias que possam parecer.
 
     Assim, os teóricos ainda explicam que Raposo, que é o antagonista do desenho, é quem teria roubado os seus olhos. Desde então, ela passa a jornada em busca de novos pares, explorando lugares e conhecendo animais diferentes que poderiam lhe ajudar.
+    </section>
+    <section>
+        <h3>amizades</h3>
+        <p>
+            A “Dora, a Aventureira” é uma série de desenhos animados da Nickelodeon, que mostra as aventuras de Dora, uma menina simpática e seu amigo Botas, um macaquinho de botas vermelhas, que além de garantir a diversão dos pequenos, ainda tem caráter educativo, os dois amigos ensinam os telespectadores a falar inglês.
+        </p>
+    </section>
     
 </p>
     </main>
