--- a/index.html
+++ b/index.html
@@ -67,6 +67,10 @@
                 <img src="./img/scratch.png"></img>
                 <p>scratch</p>
               </a>
+              <a href="https://scratch.mit.edu/" target="_blank" rel="noopener noreferrer">
+                <img src="./img/scratch.png"></img>
+                <p>scratch</p>
+              </a>
         </footer>
     </div>
           </a>
