--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
                 <img src="./img/scratch.png"></img>
                 <p>scratch</p>
               </a>
-              <a href="https://scratch.mit.edu/" target="_blank" rel="noopener noreferrer">
-                <img src="./img/scratch.png"></img>
-                <p>scratch</p>
+              <a href="https://vercel.com/kamillys-projects-9dc04693" target="_blank" rel="noopener noreferrer">
+                <img src="./img/vercel.jpg"></img>
+                <p>vercel</p>
               </a>
         </footer>
     </div>
