--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
         </main>
     
         <footer>
-            <a href="https://github.com/luizgustavo2507" target="_blank" rel="noopener noreferrer">
+            <a href="https://github.com/milly1516" target="_blank" rel="noopener noreferrer">
               <img src="./img/github.png"></img>
               <p>github</p>
             </a>
-            <a href="https://vercel.com/luiz-s-projects-ab97f2a8/in/" target="_blank" rel="noopener noreferrer">
+            <a href="https://vercel.com/kamillys-projects-9dc04693" target="_blank" rel="noopener noreferrer">
                 <img src="./img/vercel.jpg"></img>
                 <p>vercel</p> 
               </a>
-              <a href="https://scratch.mit.edu//in/" target="_blank" rel="noopener noreferrer">
+              <a href="https://scratch.mit.edu/" target="_blank" rel="noopener noreferrer">
                 <img src="./img/scratch.png"></img>
                 <p>scratch</p>
               </a>
