--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     
         <header>
             <div class="center">
-                <img src="./img/neymar.jpg"</img>  
+                <img src="./img/dora avrntureira.jpg"</img>  
             </div>
-            <h1>Neymar</h1>
-            <h2>A história do neymar</h2>
+            <h1>dora aventureira</h1>
+            <h2>história</h2>
         </header>
     
         <main>
@@ -45,7 +45,7 @@
     </p>
             </section>
             <section>
-                <h3>clubes</h3>
+                <h3>amizades</h3>
     <p>
      # O jogador brasileiro descoberto pelo santos um time brasileiro acabou se destacando na época, depois foi tranferido para o barcelona, depois do jogador sair do barcelona foi tranderido para o PSG "Paris saint-germain", depois de ter saido do PSG, o jogador brasileiro foi tranferido para o AL-HILAL., Dlibles: Os blibles insanos do jogador neymar JR influênciam muitos jogadores a ser mais ousado com a bola e também inspiram vários jogadores nas bases a ser um bom jogador.
     </p>     
