--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <a href="project.html">Tragetória</a>
                 </li>
                 <li>
-                    <a href="contact.html">Dlibles</a>
+                    <a href="contact.html">amizades</a>
                 </li>
             </ul>
         </nav>
