--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                     <a href="index.html">História</a>
                 </li>
                 <li>
-                    <a href="project.html">Tragetória</a>
+                    <a href="project.html">caractéristicas</a>
                 </li>
                 <li>
                     <a href="contact.html">amizades</a>
@@ -35,13 +35,13 @@
             <section>
                 <h3>História</h3>
     <p>
-     #Neymar da silva santos, nascido em 5 de fevereiro de 1992, em mogi das cruzes, no brasil, Neymar se tornou um dos melhores jogadores do mundo, que já passou por diversos clubes famosos, Neymar conseguiu se tornar um grande jogador de futebol em destaque a uma combinação de talento natural, dedicação e apoio familiar.
+        Dora é uma garotinha latina de sete anos apaixonada por aventuras. Na companhia de sua mochila roxa e de Botas, seu melhor amigo macaco, ela embarca em frequentes viagens, superando obstáculos e solucionando enigmas pelo caminho.
     </p>
             </section>
             <section>
-                <h3>Tragetória</h3>
+                <h3>caractéristicas</h3>
     <p>
-     # Neymar inicio sua carreira profissional pelo time do santos em 2009, destacando-se rapidmente, Em 2010, neymar conquistou a copa do brasil, e em 2011 conquistou a copa libertadores, levando o santos a um título que não conquistava desde 1963., Depois de ter levado o santos pra cima, neymar ganhou prêmios como melhor jogador do campeonato brasileiro e acabou se tornando uma estrela no futebol, Em 2013, neymar foi Tranferido para o barcelona, formando o famoso trio"neymar com lionel messi e luiz suárez", Com o barcelona neymar ganhos a liga dos campeões em "2015", támbem ganhou a la liga e copa do rei, além de se destacar como um dos maiores artilheiros do time, depois de tudo isso neymar teve várias memórias boas com o time do barcelona, como na semifinal da liga dos campeões de 2017, aonde marcou um hat-trick contra o paris saint-germain, Em 2017, neymar foi tranferido para o PSG por $222 milhões, sendo a maior Tranferência da história, depois de tudo isso neymar continuou a brilhar cada vez mais, ganhando títulos na ligue 1 e se destacando na champions league, depois disso neymar enfrentou várias lesões que acabaram afastarando o jogador de importantes competições, mais sempre que retornava jogava muito bem, O neymar é um ótimo jogador na seleção brasileira, que já participou de várias copas do mundo e copas américas, Neymar ganhou a copa américa de 2019 e a medalha de ouro nas olimpíadas de 2016, e acabou se tornando o maior artilheiro da história na seleção brasileira.
+        Interpretada por Isabella Merced, a Dora em versão live-action é corajosa, inteligente e esbanja uma energia cativante - e é exatamente por tais qualidades que Dora e a Cidade Perdida não perde a capacidade de divertir na maioria do tempo, mesmo claramente tendo sido produzido para o mesmo público infantil já
     </p>
             </section>
             <section>
