--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <section>
                 <h3>amizades</h3>
     <p>
-     # O jogador brasileiro descoberto pelo santos um time brasileiro acabou se destacando na época, depois foi tranferido para o barcelona, depois do jogador sair do barcelona foi tranderido para o PSG "Paris saint-germain", depois de ter saido do PSG, o jogador brasileiro foi tranferido para o AL-HILAL., Dlibles: Os blibles insanos do jogador neymar JR influênciam muitos jogadores a ser mais ousado com a bola e também inspiram vários jogadores nas bases a ser um bom jogador.
+        Junto com as meninas exploradoras e Pablo, Dora e amigos irão trabalhar juntos e ir em aventuras incríveis enquanto desvendam os segredos da cidade.
     </p>     
             </section>
         </main>
